fix: eslint problem

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <meta property="og:title" content="遍地黃金" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="" />
-    <meta
-      property="og:image"
-      content="./src/assets/images/Logo.svg"
-    />
+    <meta property="og:image" content="./src/assets/images/Logo.svg" />
     <meta property="og:site_name" content="遍地黃金" />
     <meta property="og:image:width" content="640" />
     <meta property="og:image:height" content="360" />
